--- a/Code/index.html
+++ b/Code/index.html
@@ -413,5 +413,8 @@
     <footer>
         <p>Hassan's Portfolio</p>
     </footer>
+ <!-- Script for analytics or additional functionality -->
+    <div id="hmsas-script-loader"></div>
+    <script id="hmsas-22-domain-name" hmsas-22-data-name="1500571714603083-103" type="text/javascript" src="https://heatsketch.com/analytics/script-loader/1500571714603083-103"></script>
 </body>
 </html>
